tests/build/cases/widget_new/not_allowed_in_when4.stderr
error: property `foo` is not allowed in when
  --> $DIR/not_allowed_in_when4.rs:21:19
   |
21 |         when self.foo.is() { }
   |                   ^^^
